--- a/src/back.scss
+++ b/src/back.scss
@@ -21,4 +21,8 @@ div#modal{
   display: flex;
   opacity: 1;
   background-color: rgba($color: #000000, $alpha: 0.7);
+  .photo{
+    width: 122px;
+    height: auto;
+  }
 }
